--- a/kr/index.html
+++ b/kr/index.html
@@ -77,6 +77,10 @@ language: kr
                 <h2>인기 괴도</h2>
                 <div class="character-cards">
                     <div class="character-card">
+                        <div class="character-card-img"><a href="./character/character.html?name=사나다&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/사나다.webp" alt="사나다"></a></div>
+                        <div class="character-card-text"><p>사나다 아키히코</p></div>
+                    </div>
+                    <div class="character-card">
                         <div class="character-card-img"><a href="./character/character.html?name=유카리&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/유카리.webp" alt="유카리"></a></div>
                         <div class="character-card-text"><p>타케바 유카리</p></div>
                     </div>
@@ -95,10 +99,6 @@ language: kr
                     <div class="character-card">
                         <div class="character-card-img"><a href="./character/character.html?name=야오링·사자무&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/야오링·사자무.webp" alt="야오링·사자무"></a></div>
                         <div class="character-card-text"><p>야오링·사자무</p></div>
-                    </div>
-                    <div class="character-card">
-                        <div class="character-card-img"><a href="./character/character.html?name=미오&v=' + APP_VERSION" style="text-decoration: none; color: inherit;"><img src="{{ site.baseurl }}/assets/img/tier/미오.webp" alt="미오"></a></div>
-                        <div class="character-card-text"><p>나츠카와 미오</p></div>
                     </div>
                 </div>
             </div>
