persona en&jp 2

--- a/about/index.html
+++ b/about/index.html
@@ -31,11 +31,15 @@ language: kr
                 Lufel.net is an unofficial information site created by an individual for Persona 5 The Phantom X players. 
                 <br>
                 It started with the hope that more people would enjoy P5X.
+                <br><br>
+                <strong>The strategy information provided on this site is contributed by top-ranking players from the Korean server.</strong>
             </p>
             <p id="site-description-jp" class="japanese-content" style="display: none;">
                 Lufel.netは「ペルソナ5 ザ ファントム X」プレイヤーのために個人が作成した非公式情報サイトです。
                 <br>
                 より多くの人がP5Xを楽しんでくれればという気持ちから始まりました。
+                <br><br>
+                <strong>このサイトで提供される攻略情報は、韓国サーバーの上位ランカーによって提供されています。</strong>
             </p>
         </div>
 
