--- a/persona/index.html
+++ b/persona/index.html
@@ -699,7 +699,7 @@ alternate_urls:
                     <ins class="adsbygoogle"
                          style="display:block"
                          data-ad-format="fluid"
-                         data-ad-layout-key="-fb+5k+67-cb+t"
+                         data-ad-layout-key="-er+5f+66-dn+4y"
                          data-ad-client="ca-pub-5862324369257695"
                          data-ad-slot="6110222512"></ins>
                     <script>
