--- a/persona/index.html
+++ b/persona/index.html
@@ -289,7 +289,12 @@ alternate_urls:
     </div>
 
     <!-- 카드 리스트 위에 직접 삽입 -->
-    <div class="ad-container" style="width: 100%; margin: 20px 0; min-height: 150px; overflow: visible;">
+    <style>
+        .reveal-ad-button {
+            background-color: #221c1c;
+        }
+    </style>
+    <div class="ad-container" style="width: 100%; margin: 20px 0; padding: 20px 0; min-height: 150px; overflow: visible;">
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-format="fluid"
@@ -702,6 +707,7 @@ alternate_urls:
             cardsContainer.appendChild(detailContainer);
 
             // 10개의 카드마다 광고 삽입
+            /*
             if (index === 9) {
                 const adContainer = document.createElement('div');
                 adContainer.className = 'ad-container';
@@ -728,7 +734,7 @@ alternate_urls:
                         window.adsbygoogle.push({});
                     }
                 }, 200);
-            }
+            }*/
 
             // Initialize tooltips
             addTooltips();
