--- a/persona/index.html
+++ b/persona/index.html
@@ -294,7 +294,7 @@ alternate_urls:
             background-color: #221c1c;
         }
     </style>
-    <div class="ad-container" style="width: 100%; margin: 20px 0; padding: 20px 0; min-height: 150px; overflow: visible;">
+    <div class="ad-container" style="width: 100%; padding: 0px 20px; overflow: visible; border-radius: 10px;">
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-format="fluid"
