--- a/persona/index.html
+++ b/persona/index.html
@@ -311,6 +311,7 @@ alternate_urls:
         }
     </style>
     <div class="ad-container" style="width: calc(100% - 40px); margin: 20px 0 10px 0; padding: 0px 20px; max-height: 150px; overflow: hidden; border-radius: 10px;">
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5862324369257695" crossorigin="anonymous"></script>
       <ins class="adsbygoogle"
            style="display:block"
            data-ad-format="fluid"
@@ -341,16 +342,7 @@ alternate_urls:
 </div>
 
 
-<!-- 모바일에서는 자동 광고 스크립트 로드 안함 -->
-<script>
-    if (window.innerWidth > 768) { // 데스크탑 전용
-      const adScript = document.createElement('script');
-      adScript.src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js";
-      adScript.async = true;
-      adScript.setAttribute("data-ad-client", "ca-pub-5862324369257695");
-      document.head.appendChild(adScript);
-    }
-</script>
+
 
 
 <script>
