--- a/persona/index.html
+++ b/persona/index.html
@@ -314,7 +314,7 @@ alternate_urls:
     <div class="ad-container" style="width: calc(100% - 40px); margin: 20px 0 10px 0; padding: 0px 20px; max-height: 240px; overflow: hidden; border-radius: 10px;">
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5862324369257695" crossorigin="anonymous"></script>
       <ins class="adsbygoogle"
-           style="display:block"
+           style="display:block; border-radius: 10px;"
            data-ad-format="fluid"
            data-ad-layout-key="-er+5f+66-dn+4y"
            data-ad-client="ca-pub-5862324369257695"
@@ -330,9 +330,8 @@ alternate_urls:
     </div>
 
     <div class="ad-container" style="width: calc(100% - 40px); margin: 20px 0 10px 0; padding: 0px 20px; max-height: 240px; overflow: hidden; border-radius: 10px;">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5862324369257695" crossorigin="anonymous"></script>
         <ins class="adsbygoogle"
-             style="display:block"
+             style="display:block; border-radius: 10px;"
              data-ad-format="fluid"
              data-ad-layout-key="-er+5f+66-dn+4y"
              data-ad-client="ca-pub-5862324369257695"
