--- a/persona/index.html
+++ b/persona/index.html
@@ -1048,6 +1048,10 @@ alternate_urls:
     }
 </script>
 
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
 <style>
 .explain-container {
     margin: 20px 0 0 0;
