--- a/persona/index.html
+++ b/persona/index.html
@@ -298,6 +298,7 @@ alternate_urls:
             .ad-container {
                 width: 100% !important;
                 padding: 0px 0px !important;
+                margin-top: 0px !important;
             }
 
             ins.adsbygoogle[data-side-rail-status="displayed"] {
@@ -729,15 +730,16 @@ alternate_urls:
             
             cardsContainer.appendChild(detailContainer);
 
-            // 10개의 카드마다 광고 삽입
+            // 15개의 카드마다 광고 삽입
             
-            if ((index + 1) % 12 === 1 && index < sortedPersonas.length - 1) 
+            if ((index + 1) % 15 === 1 && index < sortedPersonas.length - 1) 
             {
                 const adContainer = document.createElement('div');
                 adContainer.className = 'ad-container';
                 adContainer.style.overflow = 'visible';
                 adContainer.style.width = '100%';
                 adContainer.style.borderRadius = '10px';
+                adContainer.style.marginTop = '-20px';
 
                 // 광고 ins 태그만 동적으로 추가
                 const ins = document.createElement('ins');
