--- a/character/character.html
+++ b/character/character.html
@@ -286,12 +286,22 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
     <ins class="adsbygoogle"
         style="display:block"
         data-ad-format="fluid"
-        data-ad-layout-key="-gc+3r+68-9q-29"
+        data-ad-layout-key="-gc+3n+7a-ag-4h"
         data-ad-client="ca-pub-5862324369257695"
         data-ad-slot="5373524213"></ins>
     <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+
+    <style>
+        .rh {
+            background-color: #393f4b !important;
+        }
+
+        .card-style {
+            background: #393f4b;
+        }
+    </style>
 
     <!-- 스킬 섹션 -->
     <div class="skills-card card-style">
