--- a/about/index.html
+++ b/about/index.html
@@ -66,7 +66,8 @@ alternate_urls:
             <p id="contact-description-en" class="english-content" style="display: none;">
                 If you find bugs, incorrect data, or have feedback, please contact us via
                 <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link">Discord</a> or
-                <a href="mailto:superphil722@gmail.com" class="email-link">superphil722@gmail.com</a>.
+                <a href="mailto:superphil722@gmail.com" class="email-link">superphil722@gmail.com</a>. 
+                <a href="https://lufel.net/privacy.html" class="privacy-link">Privacy Policy</a>
             </p>
             <p id="contact-description-jp" class="japanese-content" style="display: none;">
                 バグや間違ったデータを発見したり、フィードバックがある場合は
