--- a/character/character.html
+++ b/character/character.html
@@ -378,6 +378,17 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <!-- 무기들이 여기에 동적으로 추가됨 -->
         </div>
     </div>
+
+    <!-- 광고 -->
+    <ins class="adsbygoogle"
+    style="display:block"
+    data-ad-format="fluid"
+    data-ad-layout-key="-gc+3n+7a-ag-4h"
+    data-ad-client="ca-pub-5862324369257695"
+    data-ad-slot="5373524213"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 </div>
 
 <script>
