--- a/defense-calc/index.html
+++ b/defense-calc/index.html
@@ -139,7 +139,31 @@ description: 페르소나5 더 팬텀 X 방어력 감소 계산기
             </div>
         </div>
     </div>
+    <!-- 광고 -->
+    <div class="ads-container responsive-padding">
+        <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-format="fluid"
+        data-ad-layout-key="-gc+3n+7a-ag-4h"
+        data-ad-client="ca-pub-5862324369257695"
+        data-ad-slot="5373524213"></ins>
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
 </div>
+
+<style>
+    .responsive-padding {
+        margin-top: 20px;
+        padding: 0px 20px;
+    }
+    @media (max-width: 768px) {
+        .responsive-padding {
+            padding: 0px 0px;
+        }
+    }
+</style>
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
