--- a/apps/revelations/index.html
+++ b/apps/revelations/index.html
@@ -31,7 +31,7 @@ alternate_urls:
     
     <!-- Navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current">계시</span>
     </div>
