--- a/apps/tactic/tactic-share.html
+++ b/apps/tactic/tactic-share.html
@@ -16,7 +16,7 @@ description: 페르소나5 더 팬텀 X 택틱을 자유롭게 공유하세요.
 <div class="main-wrapper">
     <!-- 네비게이션 경로 -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page">택틱 / 택틱 대장간</span>
     </div>
