--- a/character/character.html
+++ b/character/character.html
@@ -43,7 +43,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                         characterText = 'キャラクター';
                     }
                     
-                    document.write(`<a href="../?v=${APP_VERSION}">${homeText}</a>`);
+                    document.write(`<a href="../../?v=${APP_VERSION}">${homeText}</a>`);
                 </script>
                 <span class="separator">/</span>
                 <script>document.write(`<a href="./?v=${APP_VERSION}">${characterText}</a>`);</script>
@@ -1244,11 +1244,11 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                     '공격력': 'Attack',
                     '대미지 보너스': 'Damage Bonus',
                     '대미지보너스': 'Damage Bonus',
-                    '크리티컬 확률': 'Critical Rate',
-                    '크리티컬확률': 'Critical Rate',
-                    '크리티컬 효과': 'Critical Effect',
-                    '크리티컬효과': 'Critical Effect',
-                    '관통': 'Penetration',
+                    '크리티컬 확률': 'Crit Rate',
+                    '크리티컬확률': 'Crit Rate',
+                    '크리티컬 효과': 'Crit Mult',
+                    '크리티컬효과': 'Crit Mult',
+                    '관통': 'Pierce Rate',
                     '방어력': 'Defense',
                     '방어': 'Defense',
                     '효과 명중': 'Effect Hit',
@@ -1482,7 +1482,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 '공격력': '攻撃力',
                 '대미지 보너스': 'ダメージボーナス',
                 '대미지보너스': 'ダメージボーナス',
-                '크리티컬 확률': 'クリティカル確률',
+                '크리티컬 확률': 'クリティカル確率',
                 '크리티컬확률': 'クリティカル確률',
                 '크리티컬 효과': 'クリティカル効果',
                 '크리티컬효과': 'クリティカル効果',
