--- a/apps/buff-calc/index.html
+++ b/apps/buff-calc/index.html
@@ -22,7 +22,7 @@ description: 페르소나5 더 팬텀 X 버프 계산기
 <div class="main-wrapper">
     <!-- navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page">버프 계산</span>
     </div>
