--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -13,7 +13,7 @@ description: 페르소나5 더 팬텀 X 방어력 감소 계산기
 <div class="main-wrapper">
     <!-- navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="../../?v=${APP_VERSION}">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page">방어력 계산</span>
     </div>
