--- a/buff-calc/index.html
+++ b/buff-calc/index.html
@@ -10,19 +10,19 @@ description: 페르소나5 더 팬텀 X 버프 계산기
 ---
 
 <head>
-    <link rel="stylesheet" href="../../assets/css/lock.css">
-    <script src="../../assets/js/lock.js"></script>
-    <script src="../../data/kr/calc/buff-data.js"></script>
-    <script src="../../data/kr/calc/buff-data-ritual.js"></script>
-    <script src="../../data/kr/calc/buff-data-dealer.js"></script>
-    <script src="../../assets/js/buff-calc.js"></script>
+    <link rel="stylesheet" href="../assets/css/lock.css">
+    <script src="../assets/js/lock.js"></script>
+    <script src="../data/kr/calc/buff-data.js"></script>
+    <script src="../data/kr/calc/buff-data-ritual.js"></script>
+    <script src="../data/kr/calc/buff-data-dealer.js"></script>
+    <script src="../assets/js/buff-calc.js"></script>
 </head>
 
 <!-- main contents -->
 <div class="main-wrapper">
     <!-- navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="../?v=${APP_VERSION}">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page">버프 계산</span>
     </div>
