--- a/critical-calc/index.html
+++ b/critical-calc/index.html
@@ -13,7 +13,7 @@ description: 페르소나5 더 팬텀 X 크리티컬 확률 계산기
 <div class="main-wrapper">
     <!-- 네비게이션 경로 -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="../?v=${APP_VERSION}">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page">크리티컬 계산</span>
     </div>
