--- a/pay-calc/index.html
+++ b/pay-calc/index.html
@@ -14,7 +14,7 @@ description: 페르소나5 더 팬텀 X 과금 계산기
 <div class="main-wrapper">
     <!-- navigation path -->
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="../?v=${APP_VERSION}">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page">과금 계산</span>
     </div>
