--- a/persona/index.html
+++ b/persona/index.html
@@ -30,7 +30,7 @@ alternate_urls:
     </div>
 
     <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
+        <script>document.write(`<a href="../?v=${APP_VERSION}" id="nav-home">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page" id="nav-current">페르소나</span>
     </div>
