--- a/tactic/index.html
+++ b/tactic/index.html
@@ -15,7 +15,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
     <div class="main-wrapper">
       <!-- navigation path -->
       <div class="navigation-path">
-        <script>document.write(`<a href="../../?v=${APP_VERSION}">홈</a>`);</script>
+        <script>document.write(`<a href="../?v=${APP_VERSION}">홈</a>`);</script>
         <span class="separator">/</span>
         <span class="current-page">택틱 / 택틱 메이커</span>
     </div>
