--- a/tier/index.html
+++ b/tier/index.html
@@ -313,7 +313,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
                 '추가 효과': 'Additional Effect',
                 '지속 대미지': 'Damage over Time',
                 '방어력 감소': 'Defense Reduction',
-                '관통': 'Penetration',
+                '관통': 'Pierce Rate',
                 '효과 명중': 'Effect Accuracy',
                 '실드': 'Shield',
                 '화상': 'Burn',
