--- a/apps/article/index.html
+++ b/apps/article/index.html
@@ -9,11 +9,11 @@ custom_css: article
     <div class="navigation-path">
         <a href="/" data-kr="홈" data-en="Home" data-jp="ホーム">홈</a>
         <span class="separator">></span>
-        <span class="current-page" data-kr="가이드" data-en="Articles" data-jp="記事">가이드</span>
+        <span class="current-page" data-kr="가이드" data-en="Guide" data-jp="ガイド">가이드</span>
     </div>
 
     <div class="header-container">
-        <h1 class="header-title" data-kr="가이드" data-en="Articles" data-jp="記事">가이드</h1>
+        <h1 class="header-title" data-kr="가이드" data-en="Guide" data-jp="ガイド">가이드</h1>
     </div>
 
     <div class="main-content">
@@ -26,7 +26,7 @@ custom_css: article
                 </div>
                 {% endif %}
                 <div class="article-content">
-                    <h3 class="article-title" style="font-size: 1.5rem; margin-top: 0px; margin-bottom: 4px; line-height: 1;"
+                    <h3 class="article-title" style="font-size: 1.5rem; margin-top: 0px; margin-bottom: 4px; line-height: 1.4;"
                         data-kr="{{ post.title }}" 
                         data-en="{% if post.translations.en.title %}{{ post.translations.en.title }}{% else %}{{ post.title }}{% endif %}" 
                         data-jp="{% if post.translations.jp.title %}{{ post.translations.jp.title }}{% else %}{{ post.title }}{% endif %}">
@@ -142,100 +142,4 @@ custom_css: article
     });
 </script>
 
-<style>
-.article-preview {
-    background: rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    padding: 1.5rem;
-    margin-bottom: 1.5rem;
-    transition: transform 0.2s;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    display: flex;
-    gap: 1.5rem;
-}
-
-.article-preview:hover {
-    transform: translateY(-2px);
-    background: rgba(0, 0, 0, 0.3);
-}
-
-.article-thumbnail {
-    flex: 0 0 150px; /* Fixed width for thumbnail */
-    overflow: hidden;
-    border-radius: 4px;
-}
-
-.article-thumbnail img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.article-content {
-    flex: 1; /* Takes remaining space */
-}
-
-.article-title {
-    margin-bottom: 0.5rem;
-    font-size: 1.5rem;
-}
-
-.article-title a {
-    color: rgba(255, 255, 255, 0.9);
-    text-decoration: none;
-}
-
-.article-title a:hover {
-    color: #d3bc8e;
-}
-
-.article-meta {
-    font-size: 0.9rem;
-    color: rgba(255, 255, 255, 0.5);
-    margin-bottom: 0.5rem;
-    display: flex;
-    gap: 1rem;
-}
-
-
-.article-tags {
-    margin-top: 0.5rem;
-}
-
-.tag {
-    display: inline-block;
-    background: rgba(255, 255, 255, 0.1);
-    padding: 0.3rem 0.6rem;
-    border-radius: 15px;
-    font-size: 0.8rem;
-    color: rgba(255, 255, 255, 0.6);
-    margin-right: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-@media screen and (max-width: 768px) {
-    .article-preview {
-        flex-direction: column; /* Stack thumbnail and content on small screens */
-        gap: 1rem; /* Adjust gap for small screens */
-        padding: 1rem;
-    }
-
-    .article-thumbnail {
-        flex: none; /* Allow thumbnail to shrink */
-        width: 100%;
-        height: 150px; /* Fixed height for thumbnail on small screens */
-    }
-
-    .article-content {
-        width: 100%;
-    }
-
-    .article-title {
-        font-size: 1.1rem;
-    }
-
-    .article-meta {
-        gap: 0.5rem;
-    }
-}
-</style> 
+ 
