--- a/apps/article/index.html
+++ b/apps/article/index.html
@@ -8,7 +8,7 @@ custom_css: article
 <div class="main-wrapper">
     <div class="navigation-path">
         <a href="/" data-kr="홈" data-en="Home" data-jp="ホーム">홈</a>
-        <span class="separator">></span>
+        <span class="separator">/</span>
         <span class="current-page" data-kr="가이드" data-en="Guide" data-jp="ガイド">가이드</span>
     </div>
 
