--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -148,7 +148,7 @@ alternate_urls:
 <div id="exchangeCodeModal" class="modal">
     <div class="modal-content">
         <span class="close-button">&times;</span>
-        <h3>KR 교환코드 (v4.1.3)</h3>
+        <h3>KR 교환코드 (v4.2.1)</h3>
         <p class="exchange-notice">
             한국 서버 크리에이터 프로그램을 통해 제공되는 교환코드입니다. 비정기적으로 업데이트 될 수 있습니다.
         </p>
@@ -316,35 +316,36 @@ alternate_urls:
     function initializePageContent() {
         
         // 교환코드 목록 (새로운 코드로 업데이트하려면 이 문자열만 수정하면 됩니다)
-        const exchangeCodes = `86316724UEKPMMVZ
-99276243UGELJUOF
-71942806UAJTYVRM
-04733255UBZCAIOY
-34148364UDIRKJZX
-03592649ULYAHIDA
-23281086UNHVKPOZ
-05503351UHXFGTDM
-06068001UJNKKNGR
-72358696UKPZLRLK
-32752264UVMIHWNG
-72875887UWOXJHAZ
-70555048USLNIQOJ
-19906595UTTPVXBP
-42319474UPDLMGQO
-00956783UQSTBWLH
-86595324UYCCXQFA
-19784764UZRRCOJK
-75021883VFBAMECT
-22548076VGWVGGJY
-39341565VBAFRNTL
-24256529VCVKSIPL
-84868262VLFZCPFY
-77870051VMUIYUYW
-46905222VHEXXZGI
-76493667VIKNQAOM
-55028303VJZPWMXB
-22411843VUJLKBBM
-64068715VVYTLDDZ`;
+        const exchangeCodes = `01678857UEWRQVMB
+26372778UGAAKCNN
+58629929UAVVOXAI
+68182968UCGFGTEI
+81689670UDUKGIVS
+78614945UMEZXNGM
+42980977UNKIOTEZ
+77508684UHZXQSEF
+02134752UJJNHZCQ
+59580397UKYPYBVA
+98856281UVILUKWM
+49066932UWXTOPVW
+53124247USHCHNWU
+93525577UTQRVFFS
+86397191UPNAXUDQ
+68198014UQPVDNVH
+74682243UYMFIHFY
+51771211UZOKARLB
+66637392VFDZEMXP
+15812601VGTIWDQM
+39272361VBCXJLLA
+45705615VCSNQLWW
+32244822VLBPQRSO
+39931467VMRLMOHB
+76034130VHATZQZE
+29384886VIWCYFVJ
+00331529VKGRRILF
+88018594VUVAUXTF
+76681685VWFVCFLB
+58855249VRUFBYFF`;
 
         // 교환코드 동적 생성 함수
         function generateExchangeCodes() {
