--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -60,31 +60,18 @@ alternate_urls:
             <h2 id="contact-title">문의 및 피드백</h2>
             <p id="contact-description" class="korean-content">
                 버그, 잘못된 데이터를 발견하거나 피드백이 있으실 경우 
-                <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link">디스코드</a> 또는 
+                <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link"><span class="discord-icon"></span>디스코드</a> 또는 
                 <a href="mailto:superphil722@gmail.com" class="email-link">superphil722@gmail.com</a>로 문의주세요.
             </p>
             <p id="contact-description-en" class="english-content" style="display: none;">
                 If you find bugs, incorrect data, or have feedback, please contact us via
-                <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link">Discord</a> or
+                <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link"><span class="discord-icon"></span>Discord</a> or
                 <a href="mailto:superphil722@gmail.com" class="email-link">superphil722@gmail.com</a>. 
             </p>
             <p id="contact-description-jp" class="japanese-content" style="display: none;">
                 バグや間違ったデータを発見したり、フィードバックがある場合は
-                <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link">Discord</a> または
+                <a href="https://discord.gg/x3fvdQtBVg" target="_blank" class="discord-link"><span class="discord-icon"></span>Discord</a> または
                 <a href="mailto:superphil722@gmail.com" class="email-link">superphil722@gmail.com</a>までお問い合わせください。
-            </p>
-        </div>
-
-        <div class="about-section">
-            <h2 id="thanks-title">Thanks To</h2>
-            <p id="thanks-description" class="korean-content">
-                - 데이터 제공 : Iant
-            </p>
-            <p id="thanks-description-en" class="english-content" style="display: none;">
-                - Data Provider : Iant
-            </p>
-            <p id="thanks-description-jp" class="japanese-content" style="display: none;">
-                - データ提供 : Iant
             </p>
         </div>
 
@@ -95,6 +82,182 @@ alternate_urls:
         <div class="about-section">
             <button id="donateButton" class="donate-button" data-kr="후원 | Donate" data-en="Support | Donate" data-jp="サポート | 寄付">후원 | Donate</button>
         </div>
+
+        <div class="about-section">
+            <h2 id="thanks-title">Thanks To</h2>
+            <p id="thanks-description" class="korean-content">
+                <button class="show-supporters-btn" onclick="showSupporters()">감사한 분들</button>
+            </p>
+            <p id="thanks-description-en" class="english-content" style="display: none;">
+                <button class="show-supporters-btn" onclick="showSupporters()">Supporters</button>
+            </p>
+            <p id="thanks-description-jp" class="japanese-content" style="display: none;">
+                <button class="show-supporters-btn" onclick="showSupporters()">サポーターリスト</button>
+            </p>
+        </div>
+
+        <!-- 후원자 목록 모달 -->
+        <div id="supporters-modal" class="modal">
+            <div class="modal-content">
+                <span class="close-modal">&times;</span>
+                <div class="supporters-list">
+                    <div class="supporter-tier">
+                        <h4>Special Thanks</h4>
+                        <ul>
+                            <li>Data Provider : Iant</li>
+                        </ul>
+                    </div>
+                    <div class="supporter-tier">
+                        <h4>Supporters</h4>
+                        <ul>
+                            <li>시아</li>
+                            <li>임*훈</li>
+                            <li>Ian</li>
+                            <li>김*현</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <style>
+            .show-supporters-btn {
+                background-color: #3d3030;
+                color: rgba(255, 255, 255, 0.9);
+                border: 1px solid rgba(255, 255, 255, 0.2);
+                padding: 5px 10px;
+                border-radius: 4px;
+                cursor: pointer;
+                font-size: 14px;
+                transition: background-color 0.2s;
+            }
+
+            .show-supporters-btn:hover {
+                background-color: #4a3a3a;
+            }
+
+            .modal {
+                display: none;
+                position: fixed;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.7);
+                z-index: 1000;
+            }
+
+            .modal-content {
+                position: relative;
+                background-color: #2a2a2a;
+                margin: 15% auto;
+                padding: 20px;
+                width: 80%;
+                max-width: 600px;
+                border-radius: 8px;
+                color: #fff;
+            }
+
+            .close-modal {
+                position: absolute;
+                right: 20px;
+                top: 10px;
+                font-size: 28px;
+                font-weight: bold;
+                color: #aaa;
+                cursor: pointer;
+            }
+
+            .close-modal:hover {
+                color: #fff;
+            }
+
+            .supporters-list {
+                margin-top: 20px;
+            }
+
+            .supporter-tier {
+                margin-bottom: 20px;
+            }
+
+            .supporter-tier h4 {
+                color: rgba(255, 255, 255, 0.9);
+                margin-bottom: 10px;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+                padding-bottom: 5px;
+            }
+
+            .supporter-tier ul {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+                display: flex;
+                flex-wrap: wrap;
+                gap: 10px;
+            }
+
+            .supporter-tier li {
+                background: rgba(255, 255, 255, 0.1);
+                padding: 5px 10px;
+                border-radius: 4px;
+                font-size: 14px;
+            }
+
+            .discord-link {
+                display: inline-flex;
+                align-items: center;
+                gap: 5px;
+                text-decoration: none;
+                color: #6f84f8 !important;
+            }
+
+            .discord-icon {
+                width: 20px;
+                height: 20px;
+                display: inline-block;
+                background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36"><path fill="%23fff" d="M107.7,8.07A105.15,105.15,0,0,0,81.47,0a72.06,72.06,0,0,0-3.36,6.83A97.68,97.68,0,0,0,49,6.83,72.37,72.37,0,0,0,45.64,0,105.89,105.89,0,0,0,19.39,8.09C2.79,32.65-1.71,56.6.54,80.21h0A105.73,105.73,0,0,0,32.71,96.36,77.7,77.7,0,0,0,39.6,85.25a68.42,68.42,0,0,1-10.85-5.18c.91-.66,1.8-1.34,2.66-2a75.57,75.57,0,0,0,64.32,0c.87.71,1.76,1.39,2.66,2a68.68,68.68,0,0,1-10.87,5.19,77,77,0,0,0,6.89,11.1A105.25,105.25,0,0,0,126.6,80.22h0C129.24,52.84,122.09,29.11,107.7,8.07ZM42.45,65.69C36.18,65.69,31,60,31,53s5-12.74,11.43-12.74S54,46,53.89,53,48.84,65.69,42.45,65.69Zm42.24,0C78.41,65.69,73.25,60,73.25,53s5-12.74,11.44-12.74S96.23,46,96.12,53,91.08,65.69,84.69,65.69Z"/></svg>');
+                background-size: contain;
+                background-repeat: no-repeat;
+                vertical-align: middle;
+            }
+
+            @media (max-width: 768px) {
+                .modal-content {
+                    margin: 20% auto;
+                    width: 90%;
+                    padding: 15px;
+                }
+            }
+        </style>
+
+        <script>
+            function showSupporters() {
+                const modal = document.getElementById('supporters-modal');
+                modal.style.display = 'block';
+
+                // 현재 언어에 따라 타이틀 변경
+                const currentLang = getCurrentLanguage();
+                const title = document.getElementById('supporters-title');
+                if (title) {
+                    title.textContent = currentLang === 'en' ? 'Supporters List' :
+                                      currentLang === 'jp' ? '支援者リスト' :
+                                      '후원자 목록';
+                }
+            }
+
+            // 모달 닫기 버튼 이벤트
+            document.querySelector('.close-modal').addEventListener('click', function() {
+                document.getElementById('supporters-modal').style.display = 'none';
+            });
+
+            // 모달 외부 클릭 시 닫기
+            window.addEventListener('click', function(event) {
+                const modal = document.getElementById('supporters-modal');
+                if (event.target === modal) {
+                    modal.style.display = 'none';
+                }
+            });
+        </script>
     </div>
 </div>
 
