--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -114,6 +114,7 @@ alternate_urls:
                             <li>임*훈</li>
                             <li>Ian</li>
                             <li>김*현</li>
+                            <li>Arthur</li>
                         </ul>
                     </div>
                 </div>
