--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -116,6 +116,7 @@ alternate_urls:
                             <li>김*현</li>
                             <li>Arthur</li>
                             <li>김*환</li>
+                            <li>카미유</li>
                         </ul>
                     </div>
                 </div>
