--- a/apps/about/index.html
+++ b/apps/about/index.html
@@ -117,6 +117,7 @@ alternate_urls:
                             <li>Arthur</li>
                             <li>김*환</li>
                             <li>카미유</li>
+                            <li>ochette</li>
                         </ul>
                     </div>
                 </div>
