--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@ alternate_urls:
             },
             'en': {
                 title: 'Persona 5: The Phantom X - LufelNet',
-                description: 'Comprehensive guide for Persona 5: The Phantom X. Characters, Personas, skills, and strategy guides all in one place.'
+                description: 'Comprehensive guide for Persona 5: The Phantom X. Wiki, Characters, Personas, skills, and strategy guides all in one place.'
             },
             'jp': {
                 title: 'ペルソナ5 ザ・ファントム X - LufelNet',
