--- a/tier/position-tier.html
+++ b/tier/position-tier.html
@@ -197,7 +197,7 @@ href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.m
     <!-- Position Tier Container -->
     <div class="position-tiers-container">
         <!-- Header Row -->
-        <div class="tier-header-cell"></div>
+        <div class="tier-header-cell">lufel.net</div>
         <!-- Position Headers will be populated by JavaScript -->
         <div class="settings-header-cell"></div>
         
