--- a/character/character.html
+++ b/character/character.html
@@ -1643,13 +1643,13 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         
         if (currentLang === 'en') {
             if (personaTitle) personaTitle.textContent = 'Recommended Personas';
-            if (partyTitle) partyTitle.textContent = 'Recommended Parties';
+            if (partyTitle) partyTitle.textContent = 'Recommended Parties Example';
         } else if (currentLang === 'jp') {
             if (personaTitle) personaTitle.textContent = '推奨ペルソナ';
-            if (partyTitle) partyTitle.textContent = '推奨パーティ';
+            if (partyTitle) partyTitle.textContent = '推奨パーティ例';
         } else {
             if (personaTitle) personaTitle.textContent = '추천 페르소나';
-            if (partyTitle) partyTitle.textContent = '추천 파티';
+            if (partyTitle) partyTitle.textContent = '추천 파티 예시';
         }
     }
 
