--- a/character/character.html
+++ b/character/character.html
@@ -264,7 +264,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                     </div>
                 </div>
             </div>
-
+            <div style="height: 10px;"></div>
             <!-- 운영 섹션 -->
             <div class="setting-group operation-settings">
                 <div class="setting-section">
@@ -392,32 +392,35 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
         <div class="weapons-container">
             <!-- 무기들이 여기에 동적으로 추가됨 -->
         </div>
+
+        <div style="height: 10px;"></div>
+        <!-- 광고 (기본적으로 표시) -->
+        <div id="ad-unit-2" class="ad-unit">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-gc+3n+7a-ag-4h"
+                data-ad-client="ca-pub-5862324369257695"
+                data-ad-slot="5373524213"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!-- Persona 5 광고 (기본적으로 표시) -->
+        <div id="ad-unit-p5-2" class="ad-unit">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-gc+3n+7a-9n-68"
+                data-ad-client="ca-pub-5862324369257695"
+                data-ad-slot="8118051131"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
     </div>
 
-    <!-- 광고 (기본적으로 표시) -->
-    <div id="ad-unit-2" class="ad-unit">
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-format="fluid"
-            data-ad-layout-key="-gc+3n+7a-ag-4h"
-            data-ad-client="ca-pub-5862324369257695"
-            data-ad-slot="5373524213"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
-    <!-- Persona 5 광고 (기본적으로 표시) -->
-    <div id="ad-unit-p5-2" class="ad-unit">
-        <ins class="adsbygoogle"
-            style="display:block"
-            data-ad-format="fluid"
-            data-ad-layout-key="-gc+3n+7a-9n-68"
-            data-ad-client="ca-pub-5862324369257695"
-            data-ad-slot="8118051131"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
+
 
     <!-- 추천 페르소나와 파티 섹션 -->
     <div id="recommended-sections" style="display: none;">
