--- a/character/character.html
+++ b/character/character.html
@@ -286,7 +286,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <ins class="adsbygoogle"
                 style="display:block"
                 data-ad-format="fluid"
-                data-ad-layout-key="-gc+3n+7a-ag-4h"
+                data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695"
                 data-ad-slot="5373524213"></ins>
             <script>
@@ -298,7 +298,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <ins class="adsbygoogle"
                 style="display:block"
                 data-ad-format="fluid"
-                data-ad-layout-key="-gc+3n+7a-9n-68"
+                data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695"
                 data-ad-slot="8118051131"></ins>
             <script>
@@ -399,7 +399,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <ins class="adsbygoogle"
                 style="display:block"
                 data-ad-format="fluid"
-                data-ad-layout-key="-gc+3n+7a-ag-4h"
+                data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695"
                 data-ad-slot="5373524213"></ins>
             <script>
@@ -411,7 +411,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <ins class="adsbygoogle"
                 style="display:block"
                 data-ad-format="fluid"
-                data-ad-layout-key="-gc+3n+7a-9n-68"
+                data-ad-layout-key="-gc+3r+68-9q-29"
                 data-ad-client="ca-pub-5862324369257695"
                 data-ad-slot="8118051131"></ins>
             <script>
