--- a/character/character.html
+++ b/character/character.html
@@ -280,7 +280,7 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
                 </div>
             </div>
         </div>
-        <div style="height: 30px;"></div>
+        <div style="height: 40px;"></div>
         <!-- 광고 (기본적으로 표시) -->
         <div id="ad-unit-1" class="ad-unit">
             <ins class="adsbygoogle"
@@ -438,6 +438,32 @@ title : 괴도 육성 가이드 - 페르소나5 더 팬텀 X 루페르넷
             <div id="recommended-party-content" class="recommended-party-content">
                 <!-- 파티 내용이 여기에 동적으로 추가됨 -->
             </div>
+        </div>
+
+        <div style="height: 40px;"></div>
+        <!-- 광고 (기본적으로 표시) -->
+        <div id="ad-unit-2" class="ad-unit">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-gc+3r+68-9q-29"
+                data-ad-client="ca-pub-5862324369257695"
+                data-ad-slot="5373524213"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+        <!-- Persona 5 광고 (기본적으로 표시) -->
+        <div id="ad-unit-p5-2" class="ad-unit">
+            <ins class="adsbygoogle"
+                style="display:block"
+                data-ad-format="fluid"
+                data-ad-layout-key="-gc+3r+68-9q-29"
+                data-ad-client="ca-pub-5862324369257695"
+                data-ad-slot="8118051131"></ins>
+            <script>
+                (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
         </div>
     </div>
 
